Project BankTutorial {
  database_type: 'PostgreSQL'
  Note: '''
    # BankTutorial Database
  '''
}

Table "accounts" {
  "id" int8 [not null, default: `nextval('accounts_id_seq'::regclass)`]
  "owner" varchar [not null]
  "balance" int8 [not null]
  "currency" varchar [not null]
  "created_at" timestamptz [not null, default: `now()`]

Indexes {
  id [pk]
}
}

Table "entries" {
  "id" int8 [not null, default: `nextval('entries_id_seq'::regclass)`]
  "account_id" int8 [not null]
  "amount" int8 [not null, note: 'Can be negative or positive']
  "created_at" timestamptz [not null, default: `now()`]

Indexes {
  id [pk]
}
}

Table "sessions" {
  "id" uuid [not null]
  "username" varchar [not null]
  "refresh_token" varchar [not null]
  "user_agent" varchar [not null]
  "client_ip" varchar [not null]
  "is_blocked" bool [not null, default: false]
  "expires_at" timestamptz [not null]
  "created_at" timestamptz [not null, default: `now()`]

Indexes {
  id [pk]
}
}

Table "transfers" {
  "id" int8 [not null, default: `nextval('transfers_id_seq'::regclass)`]
  "from_account_id" int8 [not null]
  "to_account_id" int8 [not null]
  "amount" int8 [not null, note: 'Only positive']
  "created_at" timestamptz [not null, default: `now()`]

Indexes {
  id [pk]
}
}

Table "users" {
  "username" varchar [not null]
  "hashed_password" varchar [not null]
  "full_name" varchar [not null]
  "email" varchar [not null]
  "password_changed_at" timestamptz [not null, default: `'0001-01-01 00:00:00+00'::timestampwithtimezone`]
  "created_at" timestamptz [not null, default: `now()`]

Indexes {
  username [pk]
}
}

Ref:"users"."username" < "accounts"."owner"

Ref:"accounts"."id" < "entries"."account_id"

Ref:"users"."username" < "sessions"."username"

Ref:"accounts"."id" < "transfers"."from_account_id"

Ref:"accounts"."id" < "transfers"."to_account_id"
